--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
 	
     <script type="text/javascript" src="./script.js">
+		let yourArray = [
+	'one', 
+	2,
+	true, 
+	'false', 
+	false, 
+	null
+]; 
 </script>
 
 </body>
